# cli-poke-battles

./: .gitignore  .pre-commit-config.yaml  add_content.py  main.py  pyproject.toml  readme.md
analytics/: app.py  loaders.py  plots.py
assets/: pokemon_data.json  pokemon_moves.json  pokemon_moves_data.json  pokemon_types.json  pokemon_types_data.json
assets/ascii_art/: pokemon_logo
assets/ascii_art/pokemon_ascii/: abra  aerodactyl  alakazam  arbok  arcanine  articuno  (+145 more)
commands/: update_assets.py
config/: config.py
core/: config.py
core/assets/: pokemon_data.json  pokemon_moves_data.json
core/entities/: __init__.py  battle.py  moves.py  pokemon.py  stats.py  types.py
core/exceptions/: __init__.py  battle.py
core/repositories/: __init__.py  moves.py  pokemon.py  types.py
core/schemas/: __init__.py  common.py  moves.py  pokemon.py  types.py
core/services/: __init__.py  damage_calculator.py  move_selector.py  moves_fetch.py  pokemon.py  types.py
core/utils/: files.py  random.py
entities/: __init__.py  battle.py  moves.py  pokemon.py  types.py
fetch/: fetch_pokemon_data.py  fetch_pokemon_moves.py  fetch_pokemon_types.py
game/: battle.py  game.py  pokemon.py
game/entities/: __init__.py  moves.py  pokemon.py  types.py
repositories/: __init__.py  moves.py  pokemon.py  types.py
schemas/: __init__.py  moves.py  pokemon.py  types.py
services/: __init__.py  moves.py  pokemon.py  types.py
tests/: test_move_selector.py
tui/: app.py  theme.py
tui/screens/: __init__.py  battle.py  battle.tcss  main_menu.py  main_menu.tcss  pokemon_select.py  pokemon_select.tcss
utils/: ascii_art.py  files.py  general.py  pokemon.py
utils/json_parsers/: moves.py  types.py
(+90 files in other folders)
