[project]
name = "cli-poke-battles"
version = "0.1.0"
description = ""
authors = [{ name = "javierlnmn", email = "jlm03123@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "asciimatics (==1.14.0)",
    "clear-screen (==0.1.14)",
    "colorama (==0.4.6)",
    "pick (==2.2.0)",
    "prompt-toolkit (==3.0.36)",
    "pyfiglet (==1.0.2)",
    "questionary (==2.0.1)",
    "wcwidth (==0.2.7)",
    "ruff (>=0.15.16,<0.16.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 110
exclude = ["migrations"]
lint.select = ["F", "E", "W", "I"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
