[project]
name = "cli-poke-battles"
version = "0.1.0"
description = ""
authors = [{ name = "javierlnmn", email = "jlm03123@gmail.com" }]
requires-python = ">=3.13,<4.0"
dependencies = [
    "asciimatics (==1.14.0)",
    "pick (==2.2.0)",
    "prompt-toolkit (==3.0.36)",
    "pyfiglet (==1.0.2)",
    "wcwidth (==0.2.7)",
    "ruff (>=0.15.16,<0.16.0)",
    "requests (>=2.34.2,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "streamlit (>=1.58.0,<2.0.0)",
    "textual (>=8.2.7,<9.0.0)",
    "textual-dev (>=1.8.0,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 110
exclude = ["migrations"]
lint.select = ["F", "E", "W", "I"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
